# eczoo_generator

./: .gitignore  README.md  debugpdb_generate_ecc_zoo.py  eczoo-bib-style.csl  eczoo.afdesign  eczoo_site_setup.yml  generate_ecc_zoo.py  generate_pdf_codes.py  latexlike_minilang_howto.md  main.css  pyproject.toml  sanitize_yaml_files.py  scratch_test.py
ecczoogen/: __init__.py  citationtextmanager.py  code.py  code_collection.py  eczllm.py  htmlfromminilatex.py  htmlpagecollectiongen.py  inspectimagefile.py  j2_helpers.py  minilatexscanner.py  rtyamltools.py  schema_validator.py  schemadata.py  schemaloader.py  searchindexgen.py  server.py  sitegenerationenvironment.py  zoo.py
ecczoogen/citationmanager/: __init__.py  _cslformatter.py
ecczoogen/minilatextohtml/: __init__.py
eczpdfgen/: __init__.py  __main__.py  ecznote.dtx  ecznote.ins
global_pages/: about.html  index.html
jscomponents/: .gitattributes  README.md  minitest-decodejson.html  minitest.html  minitestdocuments.json  package.json  webpack.config.js
jscomponents/eczpytranscrypt/: .gitignore  README.md  import_ecz_py_modules.py  minilatextohtml
minilatextohtml/: __init__.py
schemas/: codelistpage.yml  domainshierarchy.yml  ecc.yml  ecc_features.yml  ecc_relation_list.yml  ecc_space.yml  meta.yml  relation_list.yml  user.yml
scratch-example-codes/: CSS.yml  LDPC.yml  XZZX_toric.yml  class_linear.yml  stabilizer.yml  toric.yml
special_pages_gen/: pretty_code_graph.py
special_pages_gen/pretty_code_graph_data/: pretty_code_graph.html  pretty_code_graph.js  pretty_code_graph.scss
static_assets/icons/: avatar-unknown.afdesign  cite-icon.afdesign  eczoo-main-logo.afdesign  edit-icon.afdesign  github-logo.afdesign  permalink-logo.afdesign  tooltip-pointer.afdesign
static_pages/: contributors.html
stylesheets/: ecc-code-page--old-table-style.scss  ecc-code-page.scss  home-page.scss  llm-formatting.scss  main.scss  minilatex-formatting.scss  navigation.scss  pagegrid.scss  print.scss  search-page.scss  tiles.scss  variables.scss  visual-highlight.scss
templates/: code.html  endnotes.html  html_bottom.html  html_top.html  list_code_relations.html  page_code_list.html  scratch_test_page_code.html  selected_codes_page.html  sidebar.html
templates/dyn_pages/: code_index.html  code_list.html  code_page.html  codelistpage_base.html  (+5 more)
tools/contributors_via_git/: .gitignore  add_code_contributors_meta_field.py  extract_yaml_contributors_from_git_commits.py  fix_names.yml  generate_contributors.py  manual_code_renames.yml  pyproject.toml  requirements.txt  zzz_play_with_ruamel_yaml.py
(+113 files in other folders)
