[tool.poetry]
name = "ecczoogen"
version = "0.1.0"
description = "Generate the error correction zoo HTML files"
authors = ["Philippe Faist"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.0.2"
jsonschema = "^4.1.2"
PyYAML = "^6.0"
colorlog = "^6.5.0"
pylatexenc = "^2.10"
libsass = "^0.21.0"
jsonref = "^0.2"
arxiv = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
